2005-08-02  Florian Boor  <florian.boor@kernelconcepts.de>

    * import-vcard.c: Update import stuff to new database layout.

2005-07-29  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: Change packing of deatil table in bigscreen + portrait mode.

2005-07-25  Florian Boor  <florian.boor@kernelconcepts.de>

    * main-hildon.c: Use hidon method to connect toolbar.

2005-07-24  Florian Boor  <florian.boor@kernelconcepts.de>

    * hildon/org.gpe.gpe-contacts.service.in: Correct path to installed 
                                              executable.
    * debian/control: Tune dependencies for Maemo integration a little bit.
    * debian/links: Fix link to support package installer.
    * debian/changelog: Add new release.
    * hildon/gpe-contacts.desktop.in.in: Change path to executable.

2005-06-27  Florian Boor  <florian.boor@kernelconcepts.de>

    * Release Version 0.40
    * editing.c: Improve code for widget placement, fixing bugs on large screens.
    * main.c: Increase default window size to make all buttons fit.
    * db.c: Fix creating of new contacts.
    * Makefile.am: I should test my fixes from time to time.. 

2005-06-22  Florian Boor  <florian.boor@kernelconcepts.de>

    * Makefile.am: Fix icon installation.

2005-06-21  Florian Boor  <florian.boor@kernelconcepts.de>

    * Released Version 0.39
    * Update translations.
    * configure.ac, debian/changelog: Add some missing files and improve 
                                      file list in configure.ac.
    * editing.c, default-layout.xml: Fix editor layout on PDA screens.

2005-06-11  Florian Boor  <florian.boor@kernelconcepts.de>

    * autogen.sh: Don't run configure.
    * editing.c: Hotfix to improve behaviour on small screens.

2005-06-08  Florian Boor  <florian.boor@kernelconcepts.de>

    * configure.ac, main.h: Some fixes for bugs introduced with the hildon
                            UI support.

2005-06-04  Florian Boor  <florian.boor@kernelconcepts.de>
